# fabric-data-product-framework

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  agent.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: docs-pages.yml
configs/: fabric_houses.example.yaml
contracts/examples/: actual_data_mvp_contract.yml  normalized_data_product_contract.yml
docs/: UV_WHEEL_FABRIC_INSTALL_GUIDE.md  ai-in-the-loop.md  ai-prompt-pack.md  api-surface-policy.md  architecture.md  capability-status.md  contract-enforcement.md  credits.md  data-quality-rules-system.md  data-quality.md  deployment-and-promotion.md  engine-model.md  fabric-manual-validation.md  fabric-notebook-runtime.md  fabric-smoke-test.md  framework-responsibilities.md  framework-status.md  functional-responsibilities.md  gen_ref_pages.py  getting-started.md  governance-operating-model.md  handover-package.md  incremental-safety.md  index.md  lifecycle-operating-model.md  lineage.md  local-smoke-test.md  metadata-and-contracts.md  metadata-model.md  metadata-table-bootstrap.md  mvp-13-step-roadmap.md  mvp-workflow.md  notebook-standard.md  notebook-structure.md  product-plan.md  profiling.md  public-repo-safety.md  quick-start.md  run-summary.md  schema-drift.md  (+3 more)
docs/api/: contracts.md  dq.md  drift_checkers.md  fabric_notebook.md  governance.md  index.md  lineage.md  mvp_steps.md  profiling.md  quality.md  runtime.md  template_generator.md
docs/architecture/: data-quality-architecture.md  dqx-inspired-fabric-native-dq.md  index.md  storage-model.md
docs/assets/: README.md  callable-map.html
docs/framework/: ai-in-the-loop-design.md  framework-architecture.md  handover-guide.md  onboarding-playbook.md
docs/javascripts/: callable-finder.js  mermaid-init.js
docs/metadata-and-contracts/: contract-model.md  metadata-tables.md  notebook-responsibilities.md
docs/recipes/: fabric-dry-run.md  (+6 more)
examples/: __init__.py  fabric_mvp_notebook_walkthrough.md  mvp_fabric_smoke_test.py
schemas/: dataset_contract.schema.json
scripts/: check_release_ready.py  generate_function_reference.py
src/: README.md
templates/: fabric_adapters.py
tests/: README.md  test_actual_data_mvp_template.py  test_ai_lineage_summary.py  test_ai_quality_rules.py  test_callable_map_generation.py  test_canonical_dq_flow.py  test_cleaned_workflow_helpers.py  test_config.py  test_config_bootstrap.py  test_contracts.py  test_data_agreement.py  test_data_contract.py  test_docs_consistency.py  test_docs_manifest_navigation.py  test_docs_module_catalogue_full_names.py  test_dq.py  test_dq_canonical_flow.py  test_dq_public_surface.py  test_dq_template_regressions.py  test_dq_workflow.py  test_dq_write_rules.py  test_drift.py  test_drift_checkers.py  test_end_to_end_template_path.py  test_engines.py  test_fabric.py  test_fabric_adapters.py  test_fabric_ai_helpers.py  test_fabric_config_loading.py  test_fabric_notebook.py  test_fabric_setup_access.py  test_foundation_evidence.py  test_foundation_refactor.py  test_function_reference_generation.py  test_gen_ref_pages_api_reference.py  test_gen_ref_pages_redirects.py  test_governance_classifier.py  test_governance_dq_review_workflow.py  test_governance_widget_results.py  test_handover.py  (+36 more)
(+234 files in other folders)
