[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-data-product-framework"
version = "0.1.0"
description = "A reusable Microsoft Fabric notebook framework for building documented, governed, quality-checked, drift-aware, AI-ready data products."
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]
lineage = [
  "matplotlib>=3.8",
  "networkx>=3.0",
]
fabric-ai = [
  "openai>=1.0",
  "pydantic>=2.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocstrings[python]>=0.30",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fabric_data_product_framework = ["schemas/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
