[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabricops-kit"
version = "0.1.0"
description = "A practical starter kit for building governed, quality-checked, AI-ready notebooks in Microsoft Fabric."
requires-python = ">=3.11"
dependencies = [
  "PyYAML~=6.0",
  "jsonschema~=4.0",
  "pandas~=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.0",
  "ruff~=0.11",
]
lineage = [
  "matplotlib~=3.8",
  "networkx~=3.0",
]
fabric-ai = [
  "openai~=1.0",
  "pydantic~=2.0",
]
docs = [
  "mkdocs~=1.6",
  "mkdocstrings[python]~=0.30",
  "mkdocs-material~=9.6",
  "mkdocs-gen-files~=0.5",
  "mkdocs-literate-nav~=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fabricops_kit = ["schemas/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
